架构结构优化调整

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.czh.springcloud.root</groupId>
     <artifactId>root-server</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     <name>root-server</name>
 
@@ -23,16 +23,11 @@
         <mysql-connector-java.version>5.1.39</mysql-connector-java.version>
         <mybatis-spring-boot-starter.version>1.3.2</mybatis-spring-boot-starter.version>
         <spring-zuul.version>1.4.4.RELEASE</spring-zuul.version>
+        <swagger2.version>2.8.0</swagger2.version>
+        <com.czh.cloud.cloud-common.version>1.0.0</com.czh.cloud.cloud-common.version>
     </properties>
 
     <dependencies>
-        <!-- 统一引入common包，common包中包含log4j2的公共配置 begin-->
-        <dependency>
-            <groupId>com.czh.cloud</groupId>
-            <artifactId>cloud-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <!-- 统一引入common包，common包中包含log4j2的公共配置 end-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -56,24 +51,35 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!-- 注册到eureka jar begin -->
+        <!-- 注册到eureka begin -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-        <!-- 注册到eureka jar end -->
-        <!-- swagger -->
+        <!-- 注册到eureka end -->
+        <!-- feign begin -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <!-- feign end -->
+        <!-- swagger begin -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.8.0</version>
+            <version>${swagger2.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.8.0</version>
+            <version>${swagger2.version}</version>
         </dependency>
-        <!-- swagger -->
+        <!-- swagger end-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.44</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -88,23 +94,4 @@
         </dependencies>
     </dependencyManagement>
 
-    <build>
-        <plugins>
-            <plugin><!-- 使用Spring-Boot-tarter-parent pom,只需要添加该插件而无需配置,Maven插件，它可以将项目打包成一个可执行jar/war -->
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
